# captvolt-vcv

./: .gitignore
metamodule/: CMakeLists.txt  plugin-mm.json
src/: sidofon.cpp
src/resid/: filter.cc  filter.h
